@@ -1,8 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <java.version>21</java.version>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
   </properties>
   <modelVersion>4.0.0</modelVersion>
   <groupId>minesweeper</groupId>
@@ -19,6 +20,9 @@
           <version>3.3.0</version>
           <configuration>
             <mainClass>minesweeper.App</mainClass>
+            <arguments>
+              <argument>--enable-preview</argument>
+            </arguments>
           </configuration>
         </plugin>
     </plugins>
